--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-mapbox-gl/maps": "^8.1.0-rc.1",
     "react": "16.11.0",
     "react-native": "0.62.2"
   },
