--- a/ios/tinytown/Info.plist
+++ b/ios/tinytown/Info.plist
@@ -38,7 +38,11 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+  <string>Tinytown requires GPS to track location to provide most relevant content</string>
+  <key>NSLocationAlwaysUsageDescription</key>
+  <string>Tinytown requires GPS to track location to provide most relevant content</string>
+  <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+  <string>Tinytown requires GPS to track location to provide most relevant content</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
