add twitter sign in for iOS

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-geolocation-service": "^5.0.0",
-    "react-native-svg": "^12.1.0"
+    "react-native-svg": "^12.1.0",
+    "react-native-twitter-signin": "^1.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
