[WIP] Update Configuration for React-Native Twitter Authentication

--- a/ios/GoogleService-Info.plist
+++ b/ios/GoogleService-Info.plist
@@ -6,6 +6,8 @@
 	<string>93374358023-c65g40gelvd6mike58eer8lbeqcnpfde.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
 	<string>com.googleusercontent.apps.93374358023-c65g40gelvd6mike58eer8lbeqcnpfde</string>
+	<key>ANDROID_CLIENT_ID</key>
+	<string>93374358023-n3m69q4ucjs6j9j9qam69k8m2dc14pu3.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
 	<string>AIzaSyBdmh4U9od6ndH2P475Q9HlXW8AhUQ8oYw</string>
 	<key>GCM_SENDER_ID</key>
