--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-firebase/app": "^8.2.0",
+    "@react-native-firebase/auth": "^8.2.0",
     "@react-native-mapbox-gl/maps": "^8.1.0-rc.1",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-config": "^1.3.1",
     "react-native-geolocation-service": "^5.0.0",
     "react-native-svg": "^12.1.0",
-    "react-native-twitter-signin": "^1.1.1"
+    "react-native-twitter-signin": "github:GoldenOwlAsia/react-native-twitter-signin#master"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
