[WIP] Navigate to Twitter for Authorization
- There seems to be a problem when approve and login, where it gets stuck on the page, stating the following: "redirecting you back to the application. this may take a few moments."
- Also transitioned away from npm to yarn

--- a/ios/tinytown/Info.plist
+++ b/ios/tinytown/Info.plist
@@ -59,5 +59,19 @@
 	<false/>
 	<key>MGLMapboxMetricsEnabledSettingShownInApp</key>
 	<true/>
+	<key>CFBundleURLTypes</key>
+	<array>
+	<dict>
+		<key>CFBundleURLSchemes</key>
+		<array>
+		<string>twitterkit-oh3ny6vzN7v43Lt5R7VUbS39I</string>
+		</array>
+	</dict>
+	</array>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>twitter</string>
+		<string>twitterauth</string>
+	</array>
 </dict>
 </plist>
