--- a/ios/Podfile
+++ b/ios/Podfile
@@ -81,6 +81,8 @@ target 'tinytown' do
   pod 'Firebase/Auth'
   pod 'Firebase/Firestore'
 
+  pod 'react-native-twitter-signin', :path => '../node_modules/react-native-twitter-signin'
+
   target 'tinytownTests' do
     inherit! :complete
     # Pods for testing
