Add Firebase Configuration Files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,7 @@ buck-out/
 
 # Secrets
 .env
+
+# Firebase Configuration Files
+ios/GoogleService-Info.plist
+ios/tinytown/GoogleService-Info.plist
