Add Nunito fonts

--- a/ios/tinytown/Info.plist
+++ b/ios/tinytown/Info.plist
@@ -59,5 +59,12 @@
 	<false/>
 	<key>MGLMapboxMetricsEnabledSettingShownInApp</key>
 	<true/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Nunito-BlackItalic.ttf</string>
+		<string>Nunito-Bold.ttf</string>
+		<string>Nunito-Regular.ttf</string>
+		<string>NunitoSans-Black.ttf</string>
+	</array>
 </dict>
 </plist>
