--- a/ios/tinytown/Info.plist
+++ b/ios/tinytown/Info.plist
@@ -72,6 +72,7 @@
 	<array>
 		<string>twitter</string>
 		<string>twitterauth</string>
+	</array>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Nunito-BlackItalic.ttf</string>
