--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -136,6 +136,7 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     splits {
         abi {
@@ -215,6 +216,8 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+
+    compile project(':react-native-twitter-signin')
 }
 
 // Run this once to be able to run the application with BUCK
