--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-native-firebase/app": "^8.3.0",
+    "@react-native-firebase/app": "^8.4.1",
+    "@react-native-firebase/auth": "^9.1.2",
     "@react-native-mapbox-gl/maps": "^8.1.0-rc.1",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-config": "^1.3.1",
     "react-native-geolocation-service": "^5.0.0",
     "react-native-svg": "^12.1.0",
-    "react-native-twitter-signin": "^1.1.1"
+    "react-native-twitter-signin": "github:GoldenOwlAsia/react-native-twitter-signin#master"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
@@ -27,6 +28,7 @@
     "eslint": "^6.5.1",
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.58.0",
+    "ramda": "^0.27.0",
     "react-test-renderer": "16.11.0"
   },
   "jest": {
