Twitter Authorization on Android (#28)
* Add Firebase Configuration Files to gitignore

* Add Android Firebase Configuration File to gitignore

* [WIP] Set Up Android Twitter Authentication - 1st Iteration

* Add Contributing Policy to Guard Against PR Dependency Chain Creation

* Clarification About Chain of Dependent PRs

* Successfully Authorize Tinytown App on Twitter for Android

This commit serves as a checkpoint for authorizing app on Twitter for Android

* Add Back Deleted Files by Merge

* Improve Android Instructions

* Revert Credentials changes in README

Co-authored-by: Alberto Vildosola <56562400+alfalcon90@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,7 @@ buck-out/
 # Secrets
 .env
 
-# Configuration for Firebase
-ios/tinytown/GoogleService-Info.plist
+# Firebase Configuration Files
 ios/GoogleService-Info.plist
+ios/tinytown/GoogleService-Info.plist
+android/app/google-services.json
