--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native": "0.62.2",
     "react-native-config": "^1.3.1",
     "react-native-geolocation-service": "^5.0.0",
+    "react-native-splash-screen": "^3.2.0",
     "react-native-svg": "^12.1.0",
     "react-native-twitter-signin": "github:GoldenOwlAsia/react-native-twitter-signin#master"
   },
