--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-firebase/app": "^8.4.1",
     "@react-native-firebase/auth": "^9.1.2",
     "@react-native-mapbox-gl/maps": "^8.1.0-rc.1",
+    "lodash": "^4.17.20",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-config": "^1.3.1",
