--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-native-config": "^1.3.1",
     "react-native-geolocation-service": "^5.0.0",
     "react-native-splash-screen": "^3.2.0",
+    "react-native-static-safe-area-insets": "^2.1.1",
     "react-native-svg": "^12.1.0",
+    "react-native-svg-transformer": "^0.14.3",
     "react-native-twitter-signin": "github:GoldenOwlAsia/react-native-twitter-signin#master"
   },
   "devDependencies": {
