--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lodash": "^4.17.20",
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-compass-heading": "^1.0.2",
     "react-native-config": "^1.3.1",
     "react-native-geolocation-service": "^5.0.0",
     "react-native-splash-screen": "^3.2.0",
