--- a/package.json
+++ b/package.json
@@ -10,15 +10,22 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
     "@react-native-firebase/app": "^8.4.1",
     "@react-native-firebase/auth": "^9.1.2",
     "@react-native-mapbox-gl/maps": "^8.1.0-rc.1",
+    "@react-navigation/native": "^5.7.4",
+    "@react-navigation/stack": "^5.9.1",
     "lodash": "^4.17.20",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-compass-heading": "^1.0.2",
     "react-native-config": "^1.3.1",
     "react-native-geolocation-service": "^5.0.0",
+    "react-native-gesture-handler": "^1.8.0",
+    "react-native-reanimated": "^1.13.1",
+    "react-native-safe-area-context": "^3.1.8",
+    "react-native-screens": "^2.11.0",
     "react-native-splash-screen": "^3.2.0",
     "react-native-static-safe-area-insets": "^2.1.1",
     "react-native-svg": "^12.1.0",
