--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "@react-native-firebase/auth": "^9.1.2",
     "@react-native-mapbox-gl/maps": "^8.1.0-rc.1",
     "lodash": "^4.17.20",
-    "react": "16.11.0",
-    "react-native": "0.62.2",
+    "react": "16.13.1",
+    "react-native": "0.63.3",
     "react-native-compass-heading": "^1.0.2",
     "react-native-config": "^1.3.1",
     "react-native-geolocation-service": "^5.0.0",
@@ -26,15 +26,15 @@
     "react-native-twitter-signin": "github:GoldenOwlAsia/react-native-twitter-signin#master"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.2",
-    "@babel/runtime": "^7.6.2",
-    "@react-native-community/eslint-config": "^0.0.5",
-    "babel-jest": "^24.9.0",
+    "@babel/core": "^7.8.4",
+    "@babel/runtime": "^7.8.4",
+    "@react-native-community/eslint-config": "1.1.0",
+    "babel-jest": "^25.1.0",
     "eslint": "^6.5.1",
-    "jest": "^24.9.0",
-    "metro-react-native-babel-preset": "^0.58.0",
+    "jest": "^25.1.0",
+    "metro-react-native-babel-preset": "^0.59.0",
     "ramda": "^0.27.0",
-    "react-test-renderer": "16.11.0"
+    "react-test-renderer": "16.13.1"
   },
   "jest": {
     "preset": "react-native"
