--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "start": "react-native start",
+    "start": "node ./src/library/utils/start.js",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "setup": "node ./src/library/utils/env_setup.js"
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
@@ -16,6 +17,7 @@
     "@react-native-mapbox-gl/maps": "^8.1.0-rc.1",
     "@react-navigation/native": "^5.7.4",
     "@react-navigation/stack": "^5.9.1",
+    "axios": "^0.21.0",
     "lodash": "^4.17.20",
     "react": "16.11.0",
     "react-native": "0.62.2",
@@ -37,9 +39,11 @@
     "@babel/runtime": "^7.6.2",
     "@react-native-community/eslint-config": "^0.0.5",
     "babel-jest": "^24.9.0",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.3",
     "eslint": "^6.5.1",
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.58.0",
+    "prompts": "^2.3.2",
     "ramda": "^0.27.0",
     "react-test-renderer": "16.11.0"
   },
