--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^24.9.0",
+    "babel-plugin-module-resolver": "^4.0.0",
     "eslint": "^7.12.0",
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.58.0",
