--- a/ios/Podfile
+++ b/ios/Podfile
@@ -83,6 +83,9 @@ target 'tinytown' do
 
   pod 'react-native-twitter-signin', :path => '../node_modules/react-native-twitter-signin'
 
+  permissions_path = '../node_modules/react-native-permissions/ios'
+  pod 'Permission-LocationWhenInUse', :path => "#{permissions_path}/LocationWhenInUse.podspec"
+
   target 'tinytownTests' do
     inherit! :complete
     # Pods for testing
