--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.13.2",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-firebase/app": "^8.4.1",
     "@react-native-firebase/auth": "^9.1.2",
@@ -23,6 +24,7 @@
     "react-native-config": "^1.3.1",
     "react-native-geolocation-service": "^5.0.0",
     "react-native-gesture-handler": "^1.8.0",
+    "react-native-permissions": "^2.2.2",
     "react-native-reanimated": "^1.13.1",
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.11.0",
@@ -33,6 +35,7 @@
     "react-native-twitter-signin": "github:GoldenOwlAsia/react-native-twitter-signin#master",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
