--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "start": "react-native start",
+    "start": "node ./src/library/utils/start.js",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "setup": "node ./src/library/utils/setup.js"
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
@@ -16,12 +17,12 @@
     "@react-native-mapbox-gl/maps": "^8.1.0-rc.1",
     "@react-navigation/native": "^5.7.4",
     "@react-navigation/stack": "^5.9.1",
+    "axios": "^0.21.0",
     "lodash": "^4.17.20",
     "react": "16.13.1",
     "react-native": "0.63.3",
     "prop-types": "^15.7.2",
     "react-native-compass-heading": "^1.0.2",
-    "react-native-config": "^1.3.1",
     "react-native-geolocation-service": "^5.0.0",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-reanimated": "^1.13.1",
@@ -40,6 +41,7 @@
     "babel-jest": "^25.1.0",
     "babel-eslint": "^10.1.0",
     "babel-plugin-module-resolver": "^4.0.0",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.3",
     "eslint": "^7.12.0",
     "jest": "^25.1.0",
     "metro-react-native-babel-preset": "^0.59.0",
