--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-geolocation-service": "^5.0.0",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-material-ripple": "^0.9.1",
+    "react-native-radial-gradient": "^1.0.8",
     "react-native-reanimated": "^2.0.0-alpha.9.2",
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.11.0",
