--- a/package.json
+++ b/package.json
@@ -11,35 +11,42 @@
     "setup": "node ./src/library/utils/setup.js"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.13.2",
     "@react-native-community/masked-view": "^0.1.10",
-    "@react-native-firebase/app": "^8.4.1",
-    "@react-native-firebase/auth": "^9.1.2",
+    "@react-native-firebase/app": "^10.4.0",
+    "@react-native-firebase/auth": "^10.4.1",
+    "@react-native-firebase/functions": "^10.4.0",
     "@react-native-mapbox-gl/maps": "^8.1.0-rc.1",
     "@react-navigation/native": "^5.7.4",
     "@react-navigation/stack": "^5.9.1",
     "axios": "^0.21.1",
     "lodash": "^4.17.20",
+    "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-native": "0.63.3",
-    "prop-types": "^15.7.2",
     "react-native-compass-heading": "^1.0.2",
     "react-native-geolocation-service": "^5.0.0",
     "react-native-gesture-handler": "^1.8.0",
+    "react-native-permissions": "^3.0.0",
     "react-native-reanimated": "^1.13.1",
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.11.0",
     "react-native-splash-screen": "^3.2.0",
-    "react-native-static-safe-area-insets": "^2.1.1",
     "react-native-svg": "^12.1.0",
     "react-native-svg-transformer": "^0.14.3",
-    "react-native-twitter-signin": "github:GoldenOwlAsia/react-native-twitter-signin#master"
+    "react-native-twitter-signin": "github:GoldenOwlAsia/react-native-twitter-signin#master",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
+    "tv4": "^1.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/runtime": "^7.8.4",
     "@react-native-community/eslint-config": "^2.0.0",
-    "babel-jest": "^25.1.0",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^25.1.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "babel-plugin-transform-inline-environment-variables": "^0.4.3",
     "eslint": "^7.12.0",
