--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     "react": "16.13.1",
     "react-native": "0.63.3",
     "react-native-compass-heading": "^1.0.2",
+    "react-native-flipper": "^0.71.0",
     "react-native-geolocation-service": "^5.0.0",
     "react-native-gesture-handler": "^1.8.0",
+    "react-native-material-ripple": "^0.9.1",
     "react-native-permissions": "^3.0.0",
-    "react-native-reanimated": "^1.13.1",
+    "react-native-radial-gradient": "^1.0.8",
+    "react-native-reanimated": "^2.0.0-alpha.9.2",
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.11.0",
     "react-native-splash-screen": "^3.2.0",
@@ -37,7 +40,7 @@
     "react-native-twitter-signin": "github:GoldenOwlAsia/react-native-twitter-signin#master",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
-    "redux-devtools-extension": "^2.13.8",
+    "redux-flipper": "^1.4.2",
     "redux-thunk": "^2.3.0",
     "tv4": "^1.3.0"
   },
