--- a/react-app/package.json
+++ b/react-app/package.json
@@ -7,8 +7,7 @@
     "ios": "react-native run-ios",
     "start": "node ./src/library/utils/start.js",
     "test": "jest",
-    "lint": "eslint .",
-    "setup": "node ./src/library/utils/setup.js"
+    "lint": "eslint ."
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.13.2",
