--- a/firebase/functions/package.json
+++ b/firebase/functions/package.json
@@ -2,8 +2,8 @@
   "name": "functions",
   "description": "Cloud Functions for Firebase",
   "scripts": {
-    "serve": "node ./utils/serve.js",
-    "shell": "node ./utils/shell.js",
+    "serve": "node ./library/utils/serve.js",
+    "shell": "node ./library/utils/shell.js",
     "start": "yarn serve",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
