--- a/firebase/functions/package.json
+++ b/firebase/functions/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "axios": "^0.21.1",
     "firebase-admin": "^9.2.0",
-    "firebase-functions": "^3.11.0"
+    "firebase-functions": "^3.11.0",
+    "pluscodes": "^2.5.1"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.2.0"
