--- a/react-app/package.json
+++ b/react-app/package.json
@@ -28,6 +28,7 @@
     "react-native-flipper": "^0.71.0",
     "react-native-geolocation-service": "^5.0.0",
     "react-native-gesture-handler": "^1.8.0",
+    "react-native-image-colors": "^1.2.5",
     "react-native-material-ripple": "^0.9.1",
     "react-native-permissions": "^3.0.0",
     "react-native-radial-gradient": "^1.0.8",
