--- a/react-app/package.json
+++ b/react-app/package.json
@@ -55,6 +55,7 @@
     "jest": "^25.1.0",
     "metro-react-native-babel-preset": "^0.59.0",
     "ramda": "^0.27.0",
+    "react-native-version": "^4.0.0",
     "react-test-renderer": "16.13.1"
   },
   "jest": {
