--- a/react-app/package.json
+++ b/react-app/package.json
@@ -28,6 +28,7 @@
     "react-native-flipper": "^0.71.0",
     "react-native-geolocation-service": "^5.0.0",
     "react-native-gesture-handler": "^1.8.0",
+    "react-native-image-colors": "^1.2.5",
     "react-native-material-ripple": "^0.9.1",
     "react-native-permissions": "^3.0.0",
     "react-native-radial-gradient": "^1.0.8",
@@ -54,6 +55,7 @@
     "jest": "^25.1.0",
     "metro-react-native-babel-preset": "^0.59.0",
     "ramda": "^0.27.0",
+    "react-native-version": "^4.0.0",
     "react-test-renderer": "16.13.1"
   },
   "jest": {
