i78: Replace twitter auth package

--- a/react-app/package.json
+++ b/react-app/package.json
@@ -29,6 +29,7 @@
     "react-native-geolocation-service": "^5.0.0",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-image-colors": "^1.2.5",
+    "react-native-login-twitter": "^3.0.4",
     "react-native-material-ripple": "^0.9.1",
     "react-native-permissions": "^3.0.0",
     "react-native-radial-gradient": "^1.0.8",
@@ -39,7 +40,6 @@
     "react-native-splash-screen": "^3.2.0",
     "react-native-svg": "^12.1.0",
     "react-native-svg-transformer": "^0.14.3",
-    "react-native-twitter-signin": "github:GoldenOwlAsia/react-native-twitter-signin#master",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-flipper": "^1.4.2",
