--- a/react-app/package.json
+++ b/react-app/package.json
@@ -19,6 +19,7 @@
     "@react-native-mapbox-gl/maps": "^8.1.0-rc.1",
     "@react-navigation/native": "^5.7.4",
     "@react-navigation/stack": "^5.9.1",
+    "@turf/turf": "^6.3.0",
     "axios": "^0.21.1",
     "lodash": "^4.17.20",
     "prop-types": "^15.7.2",
