--- a/firebase/functions/package.json
+++ b/firebase/functions/package.json
@@ -17,7 +17,8 @@
     "axios": "^0.21.1",
     "firebase-admin": "^9.2.0",
     "firebase-functions": "^3.11.0",
-    "pluscodes": "^2.5.1"
+    "pluscodes": "^2.5.1",
+    "twitter": "^1.7.1"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.2.0"
