i98: Revert changes made for 0.12.00 build

--- a/react-app/ios/tinytown/Info.plist
+++ b/react-app/ios/tinytown/Info.plist
@@ -37,15 +37,21 @@
 		<string>twitterauth</string>
 	</array>
 	<key>LSRequiresIPhoneOS</key>
-	<true />
+	<true/>
 	<key>MGLMapboxMetricsEnabledSettingShownInApp</key>
-	<true />
+	<true/>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
-		<false />
+		<true/>
 		<key>NSExceptionDomains</key>
-		<dict />
+		<dict>
+			<key>localhost</key>
+			<dict>
+        <key>NSExceptionAllowsInsecureHTTPLoads</key>
+        <true />
+      </dict>
+		</dict>
 	</dict>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string>Tinytown requires GPS to track location to provide most relevant content</string>
@@ -73,8 +79,8 @@
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
 	<key>ITSAppUsesNonExemptEncryption</key>
-	<false />
+	<false/>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
-	<false />
+	<false/>
 </dict>
 </plist>
