i97: Use context provider for remote config data

--- a/react-app/babel.config.json
+++ b/react-app/babel.config.json
@@ -14,6 +14,7 @@
         "alias": {
           "root": "./",
           "config": "./src/config",
+          "context": "./src/context",
           "library": "./src/library",
           "rdx": "./src/redux",
           "res": "./src/res",
