i97: Enable Remote Config (#98)
* i97: Update pods and add remote config package

* i97: Fetch remote config on app launch

* i97: Switch over to use data from remote config

* i97: Move doppler config under firebase dir

* i97: Remove uneeded script and mapbox lib

* i97: Copy and spacing tweaks

* i97: Use context provider for remote config data

* i97: Use Remote Config for strings and lists

* i97: Use getListContext for About menu list

* i97: Increase JVM heap size on Android

* i97: Show toast on launch if device is offline

* i97: Unblock splash when connection is restored

* i97: Update app version

* i97: Fix connectivity bug on iOS

--- a/react-app/package.json
+++ b/react-app/package.json
@@ -1,21 +1,25 @@
 {
   "name": "tinytown",
-  "version": "0.12.01",
+  "version": "0.12.02",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "start": "node ./scripts/start.js",
+    "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "ver": "npx react-native-version --never-amend"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.13.2",
     "@react-native-community/masked-view": "^0.1.10",
-    "@react-native-firebase/app": "^10.4.0",
-    "@react-native-firebase/auth": "^10.4.1",
-    "@react-native-firebase/firestore": "^10.5.1",
-    "@react-native-firebase/functions": "^10.4.0",
+    "@react-native-community/netinfo": "^6.0.0",
+    "@react-native-firebase/analytics": "^10.8.1",
+    "@react-native-firebase/app": "^10.8.1",
+    "@react-native-firebase/auth": "^10.8.1",
+    "@react-native-firebase/firestore": "^10.8.1",
+    "@react-native-firebase/functions": "^10.8.1",
+    "@react-native-firebase/remote-config": "^10.8.1",
     "@react-native-mapbox-gl/maps": "^8.1.0-rc.1",
     "@react-navigation/native": "^5.7.4",
     "@react-navigation/stack": "^5.9.1",
