--- a/firebase/.gitignore
+++ b/firebase/.gitignore
@@ -11,6 +11,7 @@ firebase-debug.*.log*
 .firebase/
 
 # Firebase config
+env.config.js
 serviceAccount.json
 
 # Uncomment this if you'd like others to create their own Firebase project.
