--- a/react-app/package.json
+++ b/react-app/package.json
@@ -19,6 +19,7 @@
     "@react-native-firebase/auth": "^10.8.1",
     "@react-native-firebase/firestore": "^10.8.1",
     "@react-native-firebase/functions": "^10.8.1",
+    "@react-native-firebase/messaging": "^10.8.1",
     "@react-native-firebase/remote-config": "^10.8.1",
     "@react-native-mapbox-gl/maps": "^8.1.0-rc.1",
     "@react-navigation/native": "^5.7.4",
