--- a/react-app/package.json
+++ b/react-app/package.json
@@ -31,6 +31,7 @@
     "react": "16.13.1",
     "react-native": "0.63.3",
     "react-native-compass-heading": "^1.0.2",
+    "react-native-device-info": "^8.0.2",
     "react-native-flipper": "^0.71.0",
     "react-native-geolocation-service": "^5.0.0",
     "react-native-gesture-handler": "^1.8.0",
