--- a/react-app/package.json
+++ b/react-app/package.json
@@ -6,6 +6,7 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
+    "start reset": "react-native start --reset-cache",
     "test": "jest",
     "lint": "eslint .",
     "ver": "npx react-native-version --never-amend"
