--- a/react-app/android/app/src/main/AndroidManifest.xml
+++ b/react-app/android/app/src/main/AndroidManifest.xml
@@ -11,6 +11,9 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
+      <meta-data
+        android:name="com.google.firebase.messaging.shouts"
+        android:value="@string/shouts" />
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
