--- a/react-app/package.json
+++ b/react-app/package.json
@@ -31,6 +31,7 @@
     "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-native": "0.63.3",
+    "react-native-bootsplash": "^3.1.5",
     "react-native-compass-heading": "^1.0.2",
     "react-native-device-info": "^8.0.2",
     "react-native-flipper": "^0.71.0",
