--- a/react-app/android/app/src/main/AndroidManifest.xml
+++ b/react-app/android/app/src/main/AndroidManifest.xml
@@ -18,12 +18,9 @@
         android:name=".MainActivity"
         android:label="@string/app_name"
         android:configChanges="keyboard|keyboardHidden|orientation|screenSize|uiMode"
+        android:exported="true"
         android:launchMode="singleTask"
         android:windowSoftInputMode="adjustResize">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
         <intent-filter>
           <action android:name="android.intent.action.VIEW" />
           <category android:name="android.intent.category.DEFAULT" />
@@ -31,6 +28,15 @@
           <data android:scheme="tinytown" />
         </intent-filter>
       </activity>
+      <activity
+          android:name="com.zoontek.rnbootsplash.RNBootSplashActivity"
+          android:theme="@style/SplashTheme"
+          android:launchMode="singleTask">
+          <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+            <category android:name="android.intent.category.LAUNCHER" />
+          </intent-filter>
+        </activity>
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
     </application>
 
