--- a/react-app/ios/tinytown/Info.plist
+++ b/react-app/ios/tinytown/Info.plist
@@ -68,11 +68,11 @@
 		</dict>
 	</dict>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>Tinytown uses location information to provide relevant content near users&apos; location.</string>
+	<string>Tinytown uses location information to provide relevant content near your location.</string>
 	<key>NSLocationAlwaysUsageDescription</key>
-	<string>Tinytown uses location information to provide relevant content near users&apos; location.</string>
+	<string>Tinytown uses location information to provide relevant content near your location.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Tinytown uses location information to provide relevant content near users&apos; location.</string>
+	<string>Tinytown uses location information to provide relevant content near your location.</string>
 	<key>NSMotionUsageDescription</key>
 	<string>Motion permission helps detect when device in in-motion.</string>
 	<key>BGTaskSchedulerPermittedIdentifiers</key>
