--- a/react-app/android/app/src/main/AndroidManifest.xml
+++ b/react-app/android/app/src/main/AndroidManifest.xml
@@ -11,6 +11,8 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
+      <service android:name="com.transistorsoft.locationmanager.service.TrackingService" android:foregroundServiceType="location" />       
+      <service android:name="com.transistorsoft.locationmanager.service.LocationRequestService" android:foregroundServiceType="location" />
       <meta-data
         android:name="com.google.firebase.messaging.shouts"
         android:value="@string/shouts" />
@@ -39,5 +41,4 @@
         </activity>
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
     </application>
-
 </manifest>
