i101: Ask for physical activity on iOS

--- a/react-app/ios/Podfile
+++ b/react-app/ios/Podfile
@@ -10,9 +10,10 @@ target 'tinytown' do
   pod 'Firebase/Firestore'
 
   permissions_path = '../node_modules/react-native-permissions/ios'
-  pod 'Permission-LocationAccuracy', :path => "#{permissions_path}/LocationAccuracy"
   pod 'Permission-LocationAlways', :path => "#{permissions_path}/LocationAlways"
+  pod 'Permission-LocationAccuracy', :path => "#{permissions_path}/LocationAccuracy"
   pod 'Permission-LocationWhenInUse', :path => "#{permissions_path}/LocationWhenInUse"
+  pod 'Permission-Motion', :path => "#{permissions_path}/Motion"
   
   config = use_native_modules!
   use_react_native!(:path => config["reactNativePath"])
