i101: Misc bug fixes

--- a/react-app/ios/Podfile
+++ b/react-app/ios/Podfile
@@ -14,6 +14,7 @@ target 'tinytown' do
   pod 'Permission-LocationAccuracy', :path => "#{permissions_path}/LocationAccuracy"
   pod 'Permission-LocationWhenInUse', :path => "#{permissions_path}/LocationWhenInUse"
   pod 'Permission-Motion', :path => "#{permissions_path}/Motion"
+  pod 'Permission-Notifications', :path => "#{permissions_path}/Notifications"
   
   config = use_native_modules!
   use_react_native!(:path => config["reactNativePath"])
