i101: Connect background location to firestore

--- a/react-app/android/build.gradle
+++ b/react-app/android/build.gradle
@@ -40,6 +40,10 @@ allprojects {
             // react-native-background-fetch
             url("${project(':react-native-background-fetch').projectDir}/libs")
         }
+        maven {
+            //  react-native-background-geolocation-firebase
+            url("${project(':react-native-background-geolocation-firebase').projectDir}/libs")
+        }
 
         google()
         jcenter()
