--- a/react-app/package.json
+++ b/react-app/package.json
@@ -9,7 +9,8 @@
     "start reset": "react-native start --reset-cache",
     "test": "jest",
     "lint": "eslint .",
-    "ver": "npx react-native-version --never-amend"
+    "ver": "yarn react-native-version --never-amend",
+    "clean": "yarn react-native-clean-project"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.13.2",
@@ -67,6 +68,7 @@
     "jest": "^25.1.0",
     "metro-react-native-babel-preset": "^0.59.0",
     "ramda": "^0.27.0",
+    "react-native-clean-project": "^3.4.0",
     "react-native-version": "^4.0.0",
     "react-test-renderer": "16.13.1"
   },
