--- a/react-app/package.json
+++ b/react-app/package.json
@@ -30,8 +30,8 @@
     "axios": "^0.21.1",
     "lodash": "^4.17.20",
     "prop-types": "^15.7.2",
-    "react": "16.13.1",
-    "react-native": "0.63.3",
+    "react": "17.0.1",
+    "react-native": "0.64.0",
     "react-native-background-fetch": "^4.0.1",
     "react-native-background-geolocation": "^3.10.0",
     "react-native-background-geolocation-firebase": "^0.4.0",
@@ -46,7 +46,7 @@
     "react-native-material-ripple": "^0.9.1",
     "react-native-permissions": "^3.0.0",
     "react-native-radial-gradient": "^1.0.8",
-    "react-native-reanimated": "^2.0.0-alpha.9.2",
+    "react-native-reanimated": "^2.0.0",
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.11.0",
     "react-native-simple-toast": "^1.1.3",
@@ -59,18 +59,18 @@
     "tv4": "^1.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.4",
-    "@babel/runtime": "^7.8.4",
+    "@babel/core": "^7.12.9",
+    "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
-    "babel-jest": "^25.1.0",
+    "babel-jest": "^26.6.3",
     "babel-plugin-module-resolver": "^4.0.0",
     "babel-plugin-transform-inline-environment-variables": "^0.4.3",
-    "jest": "^25.1.0",
-    "metro-react-native-babel-preset": "^0.59.0",
+    "jest": "^26.6.3",
+    "metro-react-native-babel-preset": "^0.64.0",
     "ramda": "^0.27.0",
     "react-native-clean-project": "^3.4.0",
     "react-native-version": "^4.0.0",
-    "react-test-renderer": "16.13.1"
+    "react-test-renderer": "17.0.1"
   },
   "jest": {
     "preset": "react-native"
